@@ -26,15 +26,15 @@ Projects templates
 Projects profiles
 ==================
 
-    - minitage.profils.varnish: create a varnish instance with or without a sample
+    - minitage.instances.varnish: create a varnish instance with or without a sample
       configuration file toward zope/plone.
-    - minitage.profils.postgresql: create a postgresql instance in the sys dir of your
+    - minitage.instances.postgresql: create a postgresql instance in the sys dir of your
       project
-    - minitage.profils.openldap: create a openldap instance in the sys dir of your
-      project 
-    - minitage.profils.paste-initd: create a paste initd file and logrotated
-      stuff in the sys dir of your project 
-    - minitage.profils.env: create a `share/minitage/minitage.env` file inside the
+    - minitage.instances.openldap: create a openldap instance in the sys dir of your
+      project
+    - minitage.instances.paste-initd: create a paste initd file and logrotated
+      stuff in the sys dir of your project
+    - minitage.instances.env: create a `share/minitage/minitage.env` file inside the
       sysdir of the project. You ll can source it and have into your environment
       the path and libraries from the registred dependencies of your project.
 
