@@ -37,7 +37,7 @@ import grp
 import re
 import subprocess
 
-from minitage.paste.profils import common
+from minitage.paste.instances import common
 from minitage.core.common import remove_path
 from paste.script import templates
 
@@ -73,7 +73,7 @@ class Template(common.Template):
                 p = os.path.join(directory, filep)
                 os.chmod(p, stat.S_IRGRP|stat.S_IXGRP|stat.S_IRWXU)
 
-Template.required_templates = ['minitage.profils.env']
+Template.required_templates = ['minitage.instances.env']
 running_user = getpass.getuser()
 gid = pwd.getpwnam(running_user)[3]
 group = grp.getgrgid(gid)[0]
