@@ -35,7 +35,7 @@ import getpass
 import pwd
 import grp
 
-from minitage.paste.profils import common
+from minitage.paste.instances import common
 from paste.script import templates
 
 class Template(common.Template):
@@ -55,7 +55,7 @@ class Template(common.Template):
                 os.chmod(p, stat.S_IRGRP|stat.S_IXGRP|stat.S_IRWXU)
 
 
-Template.required_templates = ['minitage.profils.env']
+Template.required_templates = ['minitage.instances.env']
 running_user = getpass.getuser()
 gid = pwd.getpwnam(running_user)[3]
 group = grp.getgrgid(gid)[0]
